# gh-notifier

./: Cargo.toml  README.md  flake.nix  gh-notifier.service
src/: main.rs
