[package]
name = "gh-notifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
cap-directories = "3.0.0"
cap-primitives = "3.0.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.35.1", features = ["rt", "rt-multi-thread", "macros"] }
notify-rust = "4"
