[package]
name = "gh-notifier"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.31"
cap-directories = "3.0.0"
cap-primitives = "3.0.0"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.195", features = ["derive"] }
tokio = { version = "1.35.1", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
notify-rust = "4.10.0"
